Bug fix for latest data z-index

--- a/src/app/latest-data/latest-data.component.scss
+++ b/src/app/latest-data/latest-data.component.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 8;
+  z-index: 1000;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-color: rgba(255, 255, 255, 0.5);
@@ -22,7 +22,7 @@
     padding-top: 0;
     box-sizing: border-box;
     width: 100%;
-    z-index: 9;
+    z-index: 1001;
     height:400px;
     overflow:auto;
 
